--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.20.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "umi-request": "^1.3.9"
